nullaway_error_D4230E91-A39F-44F4-92F8-7A31FE42727A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/function/client/DefaultClientResponseBuilder.java:267: error: [NullAway] dereferenced expression this.originalResponse is @Nullable
			return (this.cookies != null ? this.cookies : this.originalResponse.cookies());
			                                                                   ^
    (see http://t.uber.com/nullaway )
